# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2025 Interpretica, Unipessoal Lda. All rights reserved.

headers += files(
    'ta_wifi.h',
)

sources += files(
    'ta_wifi.c',
    'ta_wifi_internal.c',
    'ta_wifi_uci.c',
    'ta_wifi_uci_apply.c',
    'ta_wifi_uci_parser.c',
    'ta_wifi_wh.c'
)

te_libs += [
    'agentlib',
    'rpc_types',
    'tools',
    'rcfpch',
    'tapi_cfg_wifi',
]
