# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2025 Interpretica, Unipessoal Lda. All rights reserved.

#tapi_cfg_wifi_include = include_directories('')

#lib_tapi_cfg_wifi = static_library('tapi_cfg_wifi', 'tapi_cfg_wifi.c',
#                                   install: install_lib,
#                                   include_directories: [includes, tapi_cfg_wifi_include])
#dep_lib_tapi_cfg_wifi = declare_dependency(link_with: lib_tapi_cfg_wifi,
#                                           include_directories: [includes, tapi_cfg_wifi_include])
#dep_lib_static_ta_cfg_wifi = dep_lib_tapi_cfg_wifi

#headers += files(
#    'tapi_cfg_wifi.h'
#)

#sources += files(
#    'tapi_cfg_wifi.c'
#)


headers += files(
    'tapi_cfg_wifi.h',
)

sources += files(
    'tapi_cfg_wifi.c',
)

te_libs += [
    'tools'
]
